--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
                             <ul class="dropdown-menu">
                                 <li>
                                     <a href="/podstawyprogramowania">Podstawy programowania</a>
+                                    <a href="/systemy">Systemy operacyjne</a>
                                 </li>
                             </ul>
                         </li>
